# rpg-note-taker

./: README.md  dockerfile  dockerfile-gpu  elroy_config.yaml  full_output.txt  huggingface_downloader.py  llama_config.yaml  main.py  persona_prompt  pyproject.toml  startllmserver.sh  stt.py
Notes/: Thankyou.txt
