[project]
name = "notetaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=2.14.4",
    "docker>=7.1.0",
    "elroy>=0.0.68",
    "evaluate>=0.4.3",
    "halo>=0.0.31",
    "jiwer>=3.1.0",
    "langchain>=0.3.17",
    "langchain-text-splitters>=0.3.5",
    "llama-cpp-python[server]>=0.3.7",
    "moviepy>=2.1.2",
    "torch>=2.6.0",
    "transformers>=4.44.2",
]
